# TKDE-under-review-Native-Hybrid-Queries-via-ANNS

./: .gitignore  README.md  build.sh  test_hybrid_query.py  test_npg.py
NHQ-NPG_kgraph/: README.md
NHQ-NPG_kgraph/include/efanna2e/: exceptions.h  index.h  index_graph.h  index_kdtree.h  index_random.h  neighbor.h  parameters.h  util.h
NHQ-NPG_kgraph/src/: index.cpp  index_graph.cpp  index_kdtree.cpp  index_random.cpp
NHQ-NPG_kgraph/tests/: CMakeLists.txt  test_dng_index.cpp  test_dng_optimized_search.cpp
NHQ-NPG_nsw/: Makefile  README.md
NHQ-NPG_nsw/examples/cpp/: Makefile  index.cpp  search.cpp
NHQ-NPG_nsw/include/n2/: base.h  common.h  distance.h  heuristic.h  hnsw.h  hnsw_node.h  min_heap.h  mmap.h  sort.h
NHQ-NPG_nsw/src/: Makefile  base.cc  distance.cc  heuristic.cc  hnsw.cc  hnsw_node.cc  mmap.cc
NPG_kgraph/: CMakeLists.txt  README.md
NPG_kgraph/include/efanna2e/: distance.h  exceptions.h  index.h  index_graph.h  index_kdtree.h  index_random.h  neighbor.h  parameters.h  util.h
NPG_kgraph/src/: index.cpp  index_graph.cpp  index_kdtree.cpp  index_random.cpp
NPG_kgraph/tests/: CMakeLists.txt  test_dng_hybrid_search.cpp  test_dng_index.cpp  test_dng_optimized_search.cpp
NPG_nsw/n2/: .gitmodules  README.md  setup.py
NPG_nsw/n2/bindings/go/: n2gomodule.h
NPG_nsw/n2/bindings/python/: n2.pyx
NPG_nsw/n2/examples/cpp/: Makefile  hybrid_search.cpp  index.cpp  search.cpp
NPG_nsw/n2/include/n2/: common.h  data.h  distance.h  heuristic.h  hnsw.h  hnsw_build.h  hnsw_model.h  hnsw_node.h  hnsw_search.h  hnsw_search_impl.h  max_heap.h  min_heap.h  mmap.h  sort.h  utils.h  visited_list.h
NPG_nsw/n2/src/: Makefile  hnsw_build.cc  hnsw_node.cc  hnsw_search.cc
NPG_nsw/n2/tests/cpp_test/: n2_test.cpp
NPG_nsw/n2/tests/golang_test/: n2_test.go
parameter/: parameter.md
parameters/: README.md
(+1 files in other folders)
